tests/snapshots/compiletests__compiletests__test_program_compile__case_0.snap
---
source: tests/compiletests.rs
expression: "case(input, writeout_sym(&result.instructions, &symbol_table))"
---
p(Z, h(Z,W), f(W))
-----
000	get_variable X4, X1
001	get_structure h/2, X2
002	unify_value X4
003	unify_variable X5
004	get_structure f/1, X3
005	unify_value X5

