tests/snapshots/compiletests__compiletests__test_program_compile__case_1.snap
---
source: tests/compiletests.rs
expression: "case(input, writeout_sym(&result.instructions, &symbol_table))"
---
f(X, g(X,a))
-----
000	get_variable X3, X1
001	get_structure g/2, X2
002	unify_value X3
003	unify_variable X4
004	get_structure a/0, X4

