tests/snapshots/compiletests__compiletests__test_program_compile__case_2.snap
---
source: tests/compiletests.rs
expression: "case(input, writeout_compile_result(&result, &symbol_table))"
---
f(b, Y)
-----
000	get_structure b/0, X1
001	get_variable X3, X2	// X3=Y

