tests/snapshots/compiletests__compiletests__test_program_compile__case_3.snap
---
source: tests/compiletests.rs
expression: "case(input, writeout_sym(&result.instructions, &symbol_table))"
---
p(f(X), h(Y, f(a)), Y)
-----
000	get_structure f/1, X1
001	unify_variable X4
002	get_structure h/2, X2
003	unify_variable X5
004	unify_variable X6
005	get_value X5, X3
006	get_structure f/1, X6
007	unify_variable X7
008	get_structure a/0, X7

