tests/snapshots/compiletests__compiletests__test_program_compile__case_4.snap
---
source: tests/compiletests.rs
expression: "case(input, writeout_sym(&result.instructions, &symbol_table))"
---
a
-----
000	get_structure a/0, X1

