tests/snapshots/compiletests__compiletests__test_program_compile__case_5.snap
---
source: tests/compiletests.rs
expression: "format!(\"{}\\n-----\\n{}\", input, result)"
---
a
-----
get_structure a/0, X1
